--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Este repositório contém testes automatizados usando o Cypress para validar a funcionalidade de pesquisa e a ordenação de datas em uma aplicação web. Certifique-se de seguir as instruções de configuração e execução dos testes para garantir a qualidade do software.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx cypress open",
+    "recordTestDashCypress": "npx cypress run --record --key 1a0d607e-6a84-49f3-bc61-bdcb107f32b2"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/jose-paulo-95/medcof#readme",
   "devDependencies": {
-    "cypress": "^13.9.0"
+    "cypress": "^13.9.0",
+    "faker-br": "^0.4.1"
   }
 }
